[metadata]
name = rhos-bootstrap
summary = Red Hat OpenStack bootstrap utility
description_file =
    README.rst
author = Alex Schultz
author_email = aschultz@redhat.com
home_page = https://github.com/redhat-openstack/rhos-bootstrap
python_requires = >=3.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[files]
packages =
    rhos_bootstrap

data_files =
    share/rhos-bootstrap = versions/*

[entry_points]
console_scripts =
    rhos-bootstrap = rhos_bootstrap.cli:main
