[metadata]
name = rhos-bootstrap
description = Red Hat OpenStack bootstrap utility
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Alex Schultz
author_email = aschultz@redhat.com
home_page = https://github.com/redhat-openstack/rhos-bootstrap
python_requires = >=3.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages =
    rhos_bootstrap

[options.data_files]
share/rhos-bootstrap =
    versions/centos.yaml
    versions/rhel.yaml

[options.entry_points]
console_scripts =
    rhos-bootstrap = rhos_bootstrap.cli:main
